--- a/style.css
+++ b/style.css
@@ -1,4 +1,141 @@
+* {
+  box-sizing: border-box;
+}
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
+  background-color: #edeff1;
+  color: #303f43;
+}
+.playing {
+  font-weight: 500;
+  color: deepskyblue;
+}
+
+#playlist {
+  font-size: 20px;
+}
+.timer_bar {
+  display: flex;
+  align-items: center;
+}
+.progress-bar {
+  position: relative;
+  height: 30px;
+  width: calc(100% - 250px);
+  border: none;
+  border-radius: 15px;
+}
+#scrubber {
+  position: absolute;
+  height: 30px;
+  background: #adadad;
+  box-sizing: border-box;
+  width: 100%;
+  border: none;
+  border-radius: 15px;
+}
+
+#progress {
+  height: 30px;
+  box-sizing: border-box;
+  width: 0%;
+  background: #ec4079;
+  border: none;
+  border-radius: 15px;
+  z-index: 1;
+  padding: 5px 20px;
+}
+
+#seek {
+  -webkit-appearance: none;
+  height: 30px;
+  box-sizing: border-box;
+  position: absolute;
+  width: 100%;
+  background: none;
+  z-index: 2;
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  background: #8acdff;
+  border-radius: 10px;
+  border: solid 3px #dff1ff;
+  outline: 0;
+}
+#seek:focus {
+  box-shadow: 0 0 3px rgb(0, 161, 255);
+}
+#seek::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background: #53aeff;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15);
+}
+#seek::-moz-range-thumb {
+  background: #53aeff;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+}
+#seek ::-moz-focus-outer {
+  border: 0;
+}
+#seek :active::-webkit-slider-thumb {
+  box-shadow: 0px 5px 10px -2px rgba(0, 0, 0, 0.3);
+}
+
+#timer {
+  font-size: 30px;
+  font-weight: 700;
+  width: 210px;
+  margin: 0 10px 0 40px;
+}
+
+.button-container {
+  display: flex;
+  align-items: center;
+}
+
+.left-aligned {
+  margin-right: auto;
+}
+
+.center-aligned {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-container .center-aligned img {
+  margin: 20px 50px;
+}
+
+#play-pause-button {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: none;
+}
+
+#previous-button,
+#next-button,
+#open-folder-button {
+  width: 70px;
+  height: 70px;
+  border: none;
+}
+#open-folder-button {
+  margin-left: 20px;
+}
+
+.bottom {
+  position: fixed;
+  width: 100%;
+  bottom: 10px;
 }
