--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ li:hover {
   flex-direction: column;
   width: 100%;
 }
-.song-discriptions {
+.song-descriptions {
   padding: 10px;
 }
 #song-artist {
@@ -55,7 +55,7 @@ li:hover {
   float: left;
   width: 100%;
 }
-.album-discription {
+.album-description {
   margin: 10px;
 }
 .playlist-title {
